# ultimate-tic-tac-toe-game

./: .gitignore  Cargo.toml
src/: game.rs  input.rs  lib.rs  main.rs
src/game_logic/: game_board.rs  game_elements.rs  mod.rs
src/game_logic/basics/: arr2d.rs
src/game_view/: mod.rs
src/game_view/renderer/: mod.rs  renderable.rs
src/game_view/renderer/view_elements/: block.rs  circle.rs  cross.rs  grid.rs  mod.rs
tic-tac-toe/: Cargo.toml
tic-tac-toe/src/: main.rs
tic-tac-toe/src/game_logic/: game_board.rs  game_elements.rs  mod.rs
tic-tac-toe/src/game_logic/basics/: mod.rs  point.rs
web_client/: Cargo.toml
web_client/backend/: game_lobby.rs  game_socket.rs  main.rs  messages.rs
web_client/frontend/: draw_utils.js  game.html  game.js  game_view.js  index.html  index.js
